<resources>
    <string name="app_name">Skill Plus</string>
    <string name="agora_app_id">c594b983ecee4bb3959952281b77a036</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_categories">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_category_content">CategoryContentActivity</string>
    <string name="offers_tab">Teacher Skills</string>
    <string name="requests_tab">Student Needs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="needs">My needs</string>
    <string name="skills">My skills</string>
    <string name="title_activity_add_teacher_skill">AddTeacherSkillActivity</string>
    <string name="price">Price</string>
    <string name="salary">Salary</string>
    <string name="description">Description</string>
    <string name="description_title">Description</string>
    <string name="extra_sessions_title">Extra Sessions:</string>
    <string name="schedule">Schedule</string>
    <string name="session_duration">Session Duration:</string>
    <string name="sessions_count">Number of Sessions:</string>
    <string name="skill_price">Total:</string>
    <string name="schadual_time">Time:</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_bid">Bid</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="service_title">Service title</string>
    <string name="notification_skill_apply">"%1$s has applied for your skill %2$s"</string>
    <string name="notification_form_received">"%1$s has sent a proposal for your need %2$s"</string>
    <string name="notification_form_approved">"%1$s has approved your proposal for their need %2$s"</string>
    <string-array name="week_list">
        <item>Tap to Select a day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>

    </string-array>
    <string name="title_activity_add_need">New skill form</string>
</resources>
