<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/colorCardBackground">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="16dp">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/price"
                      android:textColor="@color/colorHeader"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView13"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/skill_name"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toStartOf="@+id/skill_price"
                      app:layout_constraintHorizontal_bias="0.265"/>
            <TextView android:layout_width="179dp"
                      android:text="Details"
                      android:textColor="@color/colorHeader"
                      android:textSize="18sp"
                      android:layout_height="30dp"
                      android:id="@+id/textView10"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="10dp" android:layout_marginTop="2dp"
                      app:layout_constraintTop_toBottomOf="@+id/skill_price"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="158dp"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/post_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/skill_name"
                    android:hint="skills name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/post_image"/>


            <TextView
                    android:id="@+id/skill_price"
                    android:layout_width="270dp"
                    android:layout_height="32dp"
                    android:text="@string/skill_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/skill_name"
                    app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginStart="2dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.885"/>

            <TextView android:layout_width="179dp"
                      android:text="@string/schedule"
                      android:textColor="@color/colorHeader"
                      android:textSize="18sp"
                      android:layout_height="30dp"
                      android:id="@+id/textView8"
                      android:layout_marginTop="4dp"
                      app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="158dp" app:layout_constraintHorizontal_bias="1.0"/>
            <TextView
                    android:text="Sessions duration:"
                    android:layout_width="179dp"
                    android:layout_height="30dp" android:id="@+id/textView5"
                    android:textColor="@color/colorHeader"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toStartOf="@+id/session_duration" android:layout_marginEnd="40dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"/>
            <TextView
                    android:text="Number of sessions:"
                    android:layout_width="179dp"
                    android:layout_height="30dp" android:id="@+id/textView7"
                    android:textColor="@color/colorHeader"
                    android:textSize="18sp"

                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp" android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toStartOf="@+id/session_number" android:layout_marginEnd="34dp"/>
            <TextView
                    android:text="Fees for extra sessions:"
                    android:layout_width="208dp"
                    android:layout_height="37dp"
                    android:id="@+id/textView"
                    android:textColor="@color/colorHeader"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp" app:layout_constraintEnd_toStartOf="@+id/extra_session"
                    android:layout_marginEnd="13dp"/>

            <TextView android:layout_height="34dp"
                      android:layout_width="120dp"
                      android:id="@+id/session_number"
                      tools:ignore="MissingConstraints"
                      android:layout_marginTop="36dp"
                      app:layout_constraintTop_toBottomOf="@+id/skill_price" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="2dp" app:layout_constraintStart_toEndOf="@+id/textView7"
                      android:layout_marginStart="18dp"/>

            <TextView android:layout_height="36dp"
                      android:layout_width="112dp"
                      android:id="@+id/extra_session"
                      tools:ignore="MissingConstraints"
                      app:layout_constraintTop_toBottomOf="@+id/session_duration"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
                      app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="10dp"/>

            <TextView android:layout_height="30dp" android:layout_width="115dp"
                      android:id="@+id/session_duration"
                      tools:ignore="MissingConstraints"
                      android:layout_marginStart="10dp"
                      app:layout_constraintStart_toEndOf="@+id/textView5"
                      app:layout_constraintTop_toBottomOf="@+id/session_number"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="2dp"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_current_skills_schedual"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="13dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="13dp"
                    app:layout_constraintHorizontal_bias="0.0">

            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>